--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="middle-bar row">
-            <img src="/images/logo.png" alt="logo" srcset="">
+            <img src="./images/logo.png" alt="logo" srcset="">
             <div class="search-wrapper"><input type="search" name="" id="" placeholder="Search Theme and Plugin"></div>
             <div class="middle-button-wrapper">
                 <button type="button" class="middle-bar-button">Login</button>
@@ -46,9 +46,9 @@
 
     <main class=" col-10">
         <div class="ads">
-            <img src="/images/ad1.jpeg" alt="" srcset="" class="col-10">
+            <img src="./images/ad1.jpeg" alt="" srcset="" class="col-10">
             <div class="coupon-wrapper row">
-                <img src="/images/coupon.png" alt="" srcset="">
+                <img src="./images/coupon.png" alt="" srcset="">
                 <div class="coupon-info">
                     <h2>Coupon Code</h2>
                     <h1>HOLIDAY</h1>
@@ -128,62 +128,62 @@
             <div class="carousel">
                 <div class="carousel__item">
                     <div class="brand-container">
-                        <img src="/images/brands/arraythemes.jpg" alt="" srcset="">
+                        <img src="./images/brands/arraythemes.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/codecanyan.jpg" alt="" srcset="">
+                        <img src="./images/brands/codecanyan.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/elementor.jpg" alt="" srcset="">
+                        <img src="./images/brands/elementor.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/learnpress.jpg" alt="" srcset="">
+                        <img src="./images/brands/learnpress.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/ninjaforms.jpg" alt="" srcset="">
+                        <img src="./images/brands/ninjaforms.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/themeforest.jpg" alt="" srcset="">
-                    </div>
-                </div>
-                <div class="carousel__item">
-                    <div class="brand-container">
-                        <img src="/images/brands/themify.jpg" alt="" srcset="">
-                    </div>
-                    <div class="brand-container">
-                        <img src="/images/brands/wpbakery.jpg" alt="" srcset="">
-                    </div>
-                    <div class="brand-container">
-                        <img src="/images/brands/wpml.jpg" alt="" srcset="">
-                    </div>
-                    <div class="brand-container">
-                        <img src="/images/brands/arraythemes.jpg" alt="" srcset="">
-                    </div>
-                    <div class="brand-container">
-                        <img src="/images/brands/codecanyan.jpg" alt="" srcset="">
-                    </div>
-                    <div class="brand-container">
-                        <img src="/images/brands/elementor.jpg" alt="" srcset="">
+                        <img src="./images/brands/themeforest.jpg" alt="" srcset="">
                     </div>
                 </div>
                 <div class="carousel__item">
                     <div class="brand-container">
-                        <img src="/images/brands/learnpress.jpg" alt="" srcset="">
+                        <img src="./images/brands/themify.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/ninjaforms.jpg" alt="" srcset="">
+                        <img src="./images/brands/wpbakery.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/themeforest.jpg" alt="" srcset="">
+                        <img src="./images/brands/wpml.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/themify.jpg" alt="" srcset="">
+                        <img src="./images/brands/arraythemes.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/wpbakery.jpg" alt="" srcset="">
+                        <img src="./images/brands/codecanyan.jpg" alt="" srcset="">
                     </div>
                     <div class="brand-container">
-                        <img src="/images/brands/wpml.jpg" alt="" srcset="">
+                        <img src="./images/brands/elementor.jpg" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="carousel__item">
+                    <div class="brand-container">
+                        <img src="./images/brands/learnpress.jpg" alt="" srcset="">
+                    </div>
+                    <div class="brand-container">
+                        <img src="./images/brands/ninjaforms.jpg" alt="" srcset="">
+                    </div>
+                    <div class="brand-container">
+                        <img src="./images/brands/themeforest.jpg" alt="" srcset="">
+                    </div>
+                    <div class="brand-container">
+                        <img src="./images/brands/themify.jpg" alt="" srcset="">
+                    </div>
+                    <div class="brand-container">
+                        <img src="./images/brands/wpbakery.jpg" alt="" srcset="">
+                    </div>
+                    <div class="brand-container">
+                        <img src="./images/brands/wpml.jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
         <div class="products center-container">
             <div class="row">
                 <div class="card-container">
-                    <img src="/images/products/wprocket.jpeg" alt="" srcset="">
+                    <img src="./images/products/wprocket.jpeg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>WP Rocket</h3>
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/AffiliateWP-WordPress-Plugin.jpg" alt="" srcset="">
+                    <img src="./images/products/AffiliateWP-WordPress-Plugin.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Affiliate WP</h3>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/avada-theme.jpg" alt="" srcset="">
+                    <img src="./images/products/avada-theme.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Avada Multi Responsive Theme</h3>
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/betheme-1.jpg" alt="" srcset="">
+                    <img src="./images/products/betheme-1.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Be Theme</h3>
@@ -261,7 +261,7 @@
             </div>
             <div class="row">
                 <div class="card-container">
-                    <img src="/images/products/eway-woocommerce-extension.png" alt="" srcset="">
+                    <img src="./images/products/eway-woocommerce-extension.png" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>E Way</h3>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/generatepress.jpg" alt="" srcset="">
+                    <img src="./images/products/generatepress.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>GeneratePress Preminum</h3>
@@ -295,7 +295,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/kalium-theme.png" alt="" srcset="">
+                    <img src="./images/products/kalium-theme.png" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Kalium-Creative Theme</h3>
@@ -312,7 +312,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/newspaper.jpg" alt="" srcset="">
+                    <img src="./images/products/newspaper.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>NewsPaper Wordpress Theme</h3>
@@ -331,7 +331,7 @@
             </div>
             <div class="row">
                 <div class="card-container">
-                    <img src="/images/products/themify.jpg" alt="" srcset="">
+                    <img src="./images/products/themify.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Themify Builder</h3>
@@ -348,7 +348,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/accommodiation-booking.png" alt="" srcset="">
+                    <img src="./images/products/accommodiation-booking.png" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>WOO Accomodation</h3>
@@ -365,7 +365,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/wp-job-manager.jpeg" alt="" srcset="">
+                    <img src="./images/products/wp-job-manager.jpeg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>WP Job Manager</h3>
@@ -382,7 +382,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/Store-Exporter-Deluxe.png" alt="" srcset="">
+                    <img src="./images/products/Store-Exporter-Deluxe.png" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Store Exporter</h3>
@@ -401,7 +401,7 @@
             </div>
             <div class="row">
                 <div class="card-container">
-                    <img src="/images/products/flatsome-theme.jpg" alt="" srcset="">
+                    <img src="./images/products/flatsome-theme.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Wordpress Flatsome</h3>
@@ -418,7 +418,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/wordfence-security-premium.jpg" alt="" srcset="">
+                    <img src="./images/products/wordfence-security-premium.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Wordpress Security</h3>
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/WooCommerce-Memberships.jpg" alt="" srcset="">
+                    <img src="./images/products/WooCommerce-Memberships.jpg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>WOO Commerce Membership</h3>
@@ -452,7 +452,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <img src="/images/products/yith-woocommerce-subscription.jpeg" alt="" srcset="">
+                    <img src="./images/products/yith-woocommerce-subscription.jpeg" alt="" srcset="">
                     <div class="prod-details">
                         <span>
                             <h3>Yith Subscription</h3>
@@ -581,7 +581,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/user-friendly.jpg" alt="Avatar"
+                                <img src="./images/needs/user-friendly.jpg" alt="Avatar"
                                     style="width:113px;height:113px;">
                                 <h2>User Friendly</h2>
                                 <p>It is very easy to use these themes and plugins. You just need to download the theme
@@ -597,7 +597,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/High-Speed-Downloads.jpg" alt="Avatar"
+                                <img src="./images/needs/High-Speed-Downloads.jpg" alt="Avatar"
                                     style="width:113px;height:113px;">
                                 <h2> Authentic Scanned Files</h2>
                                 <p> All the products on our website are scanned by Norton and verify by Mcafee.</p>
@@ -613,7 +613,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/Orginal-Files.jpg" alt="Avatar"
+                                <img src="./images/needs/Orginal-Files.jpg" alt="Avatar"
                                     style="width:113px;height:113px;">
                                 <h2>Original Files</h2>
                                 <p> All the themes and plugins are original. You’ll Receive Untouched And Unmodified
@@ -632,7 +632,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/chats.png" alt="Avatar" style="width:113px;height:113px;">
+                                <img src="./images/needs/chats.png" alt="Avatar" style="width:113px;height:113px;">
                                 <h2> Live Chat</h2>
                                 <p> You can do a live chat with us from 8:00 AM to 9:00 PM. We are happy to solve your
                                     problems</p>
@@ -648,7 +648,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/high-speed.jpg" alt="Avatar" style="width:113px;height:113px;">
+                                <img src="./images/needs/high-speed.jpg" alt="Avatar" style="width:113px;height:113px;">
                                 <h2>High-Speed Downloads</h2>
                                 <p>You can download your themes and plugins at very high speed. As we are using digital
                                     ocean cloud hosting.</p>
@@ -664,7 +664,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/images/needs/Orginal-Files.jpg" alt="Avatar"
+                                <img src="./images/needs/Orginal-Files.jpg" alt="Avatar"
                                     style="width:113px;height:113px;">
                                 <h2>Original Files</h2>
                                 <p> As we are selling Digital product and its nature is, if you download that product
@@ -720,7 +720,7 @@
                 <h2>TOP RATED PRODUCTS</h2>
                 <ul>
                     <li class="row">
-                        <img src="/images/products/EventOn-Event-Tickets.png" alt="">
+                        <img src="./images/products/EventOn-Event-Tickets.png" alt="">
                         <div>
                             <span class="info">EventOn Event Tickets</span>
                             <span class="ratings"><i class="fa-solid fa-star"></i></span>
